Added hyperlink to my github hosted file

--- a/landing page.html
+++ b/landing page.html
@@ -17,6 +17,6 @@
         <div class="o">o.</div>
     </div>
     <div class="info">Welcome to my page!</div>
-    <div class="aboutme"><a href="landing page.html">About Me</a></div>
+    <div class="aboutme"><a href="https://mesandeepmehta.github.io/" target="_blank">About Me</a></div>
 </body>
 </html>
