Added navbar to my page

--- a/landing page.html
+++ b/landing page.html
@@ -8,7 +8,13 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="nav"></div>
+    <div class="nav">
+        <ul>
+            <li><a href="#home.html">Home</a></li>
+            <li><a href="#home.html">Contact</a></a></li>
+            <li><a href="#home.html">Personal</a></li>
+        </ul>
+    </div>
     <div class="container">
         <div class="H">H</div>
         <div class="e">e</div>
