Added social media links

--- a/landing page.html
+++ b/landing page.html
@@ -8,6 +8,7 @@
     <title>Document</title>
 </head>
 <body>
+
     <div class="nav">
         <ul>
             <li><a href="#home.html">Home</a></li>
@@ -15,14 +16,22 @@
             <li><a href="#home.html">Personal</a></li>
         </ul>
     </div>
-    <div class="container">
-        <div class="H">H</div>
-        <div class="e">e</div>
-        <div class="l">l</div>
-        <div class="l1">l</div>
-        <div class="o">o.</div>
+    <div class="background">
+        <div class="container">
+            <div class="H">H</div>
+            <div class="e">e</div>
+            <div class="l">l</div>
+            <div class="l1">l</div>
+            <div class="o">o.</div>
+        </div>
+        <div class="info">Welcome to my page!</div>
+        <div class="aboutme"><a href="https://mesandeepmehta.github.io/" target="_blank">About Me</a></div>
+        <div class="contact">
+                <a href="https://www.instagram.com/_mesandy.mehtaa/"><img src="https://cdn.iconscout.com/icon/free/png-512/instagram-1464521-1239436.png?f=avif&w=256" alt="instagram" height="20px" title="instagram" target="_blank"></a>
+                <a href="https://www.facebook.com/imsandy121/"><img src="https://img.icons8.com/ios-filled/256/facebook-new.png" alt="facebook" height="20px" title="facebook" target="_blank"></a>
+                <a href="https://twitter.com/_mesandy_mehtaa"><img src="https://img.icons8.com/ios-glyphs/256/twitter.png" alt="twitter" height="20px" title="twitter" target="_blank"></a>
+                <a href="https://www.linkedin.com/in/sandeep-mehta-a70943189/"><img src="https://img.icons8.com/ios-filled/256/linkedin-2.png" alt="linkedin" height="20px" title="linkedin" target="_blank"></a>
+         </div>        
     </div>
-    <div class="info">Welcome to my page!</div>
-    <div class="aboutme"><a href="https://mesandeepmehta.github.io/" target="_blank">About Me</a></div>
 </body>
 </html>
